1.13/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-cache-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: / # serve HTML + todos
            pathType: Prefix
            backend:
              service:
                name: image-cache-svc
                port:
                  number: 80
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: image-cache-svc
                port:
                  number: 80
